--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,6 +6,5 @@ tasks:
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
   - port: 3037
-    onOpen: open-preview
-visibility:
-  - public
+    onOpen: open-browser
+    visibility: public
