--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-admin": "^3.16.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.170"
+    "@types/lodash": "^4.14.170",
+    "@types/react-router-dom": "^5.1.8"
   }
 }
