--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.1",
     "cross-fetch": "^3.1.4",
     "graphql": "^15.5.0",
     "loadash": "^1.0.0",
