--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@abdelmomen1985/ra-plop-utils": "^1.0.2",
     "@apollo/client": "^3.3.20",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
